// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`event queries:  events correctly 1`] = `
{
  "data": {
    "events": [
      {
        "admissionFee": 10,
        "admissionFeeWithDiscount": 20,
        "amountOfFloors": 4,
        "club": {
          "id": 1,
          "name": "name",
        },
        "date": "date",
        "description": "description",
        "genres": [
          {
            "id": 1,
            "name": "genre1",
          },
        ],
        "id": 1,
        "imageUrls": [],
        "links": [],
        "minimumAge": 18,
        "name": "name",
        "priceCategory": 2,
        "special": "specials",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`event queries:  existing event correctly 1`] = `
{
  "data": {
    "event": {
      "admissionFee": 10,
      "admissionFeeWithDiscount": 20,
      "amountOfFloors": 4,
      "club": {
        "id": 1,
        "name": "name",
      },
      "date": "date",
      "description": "description",
      "genres": [
        {
          "id": 1,
          "name": "genre1",
        },
      ],
      "id": 1,
      "imageUrls": [],
      "links": [],
      "minimumAge": 18,
      "name": "name",
      "priceCategory": 2,
      "special": "specials",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;
